--- a/pokemon-app/src/App.css
+++ b/pokemon-app/src/App.css
@@ -1,28 +1,26 @@
-.App {
-  text-align: center;
+.full-body {
+  background-color: rgb(185, 238, 185);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.large-container {
+  background-color: rgba(0, 0, 255, 0.192);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.left-container{
+  width: 50%;
+  background-color: rgb(119, 116, 116);
+  }
+
+.right-container {
+  background-color: aqua;
+  width: 50%;
+  height: 70.09vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
