--- a/pokemon-app/src/App.css
+++ b/pokemon-app/src/App.css
@@ -1,26 +1,27 @@
 .full-body {
-  background-color: rgb(185, 238, 185);
+  background-image: url('./assets/thumb-1920-107763.jpg');
 }
 
 .large-container {
-  background-color: rgba(0, 0, 255, 0.192);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .left-container{
-  width: 50%;
-  background-color: rgb(119, 116, 116);
+  width: 100%;
+  height: 70.09vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
   }
 
 .right-container {
-  background-color: aqua;
-  width: 50%;
+  width: 100%;
   height: 70.09vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 30px 0;
 }
-
