--- a/pokemon-app/src/components/list-dark-side/list.css
+++ b/pokemon-app/src/components/list-dark-side/list.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: left;
     padding: 15px;
+    background-color: rgba(0, 0, 0, 0.582);
     border: 1px dotted red;
 }
 
@@ -17,7 +18,8 @@
 }
 
 .character-card {
-    padding: 10px 50px;
+    color: yellow;
+    margin: 10px 15px;
 }
 
 
