--- a/pokemon-app/src/components/create/create.css
+++ b/pokemon-app/src/components/create/create.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-left: -20px;
     padding: 0px 30px;
 }
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     margin: 20px;
     color: yellow;
 }
@@ -34,4 +34,10 @@
 
 .input-text{
     margin: 8px;
+}
+
+.middle-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
